// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > should match snap 2 1`] = `
<div
  data-testid="div-app"
>
  <h1
    data-testid="firstNameTitle"
  >
     
    vyvyrruz
  </h1>
  <h3>
    corp
  </h3>
  <p
    class="mi-clase-favorita"
  >
    nfs, mario kart, valorant
  </p>
  <p>
     
    4
  </p>
  active
  <p
    style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px; margin-top: 30px;"
  >
    {"zipcode":"ABC-123","country":"CANADA"}
  </p>
</div>
`;

exports[`MyAwesomeApp > should match snapshot 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h1
      data-testid="firstNameTitle"
    >
       
      vyvyrruz
    </h1>
    <h3>
      corp
    </h3>
    <p
      class="mi-clase-favorita"
    >
      nfs, mario kart, valorant
    </p>
    <p>
       
      4
    </p>
    active
    <p
      style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px; margin-top: 30px;"
    >
      {"zipcode":"ABC-123","country":"CANADA"}
    </p>
  </div>
</div>
`;
